Bug 393334 - Okular crashed during closing after saving a pdf form
Summary: Okular crashed during closing after saving a pdf form
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: general (other bugs)
Version First Reported In: 1.4.0
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords: drkonqi
: 379749 (view as bug list)
Depends on:
Blocks:
 
Reported: 2018-04-20 11:19 UTC by Robby Engelmann
Modified: 2018-06-04 23:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Robby Engelmann 2018-04-20 11:19:45 UTC
Application: okular (1.4.0)

Qt Version: 5.10.0
Frameworks Version: 5.45.0
Operating System: Linux 4.16.2-1-default x86_64
Distribution: "openSUSE Tumbleweed"

-- Information about the crash:
- What I was doing when the application crashed:
Okular crashed during closing after saving a pdf form. It was the first time I saw this crash and I am using that very pdf form quite often.

-- Backtrace:
Application: Okular (okular), signal: Aborted
Using host libthread_db library "/lib64/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fb49c9c8180 (LWP 16836))]

Thread 3 (Thread 0x7fb48116c700 (LWP 16838)):
#0  0x00007fb4986ffbf4 in read () from /lib64/libc.so.6
#1  0x00007fb493127ab0 in ?? () from /usr/lib64/libglib-2.0.so.0
#2  0x00007fb4930e2f17 in g_main_context_check () from /usr/lib64/libglib-2.0.so.0
#3  0x00007fb4930e33d0 in ?? () from /usr/lib64/libglib-2.0.so.0
#4  0x00007fb4930e353c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#5  0x00007fb499042a2b in QEventDispatcherGlib::processEvents (this=0x7fb47c000b20, flags=...) at kernel/qeventdispatcher_glib.cpp:425
#6  0x00007fb498fe995a in QEventLoop::exec (this=this@entry=0x7fb48116bd90, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#7  0x00007fb498e10baa in QThread::exec (this=<optimized out>) at thread/qthread.cpp:522
#8  0x00007fb499466a35 in ?? () from /usr/lib64/libQt5DBus.so.5
#9  0x00007fb498e15ba0 in QThreadPrivate::start (arg=0x7fb4996d6d60) at thread/qthread_unix.cpp:376
#10 0x00007fb4956e559b in start_thread () from /lib64/libpthread.so.0
#11 0x00007fb49870ea1f in clone () from /lib64/libc.so.6

Thread 2 (Thread 0x7fb48a976700 (LWP 16837)):
#0  0x00007fb498704179 in poll () from /lib64/libc.so.6
#1  0x00007fb495b0d387 in ?? () from /usr/lib64/libxcb.so.1
#2  0x00007fb495b0efaa in xcb_wait_for_event () from /usr/lib64/libxcb.so.1
#3  0x00007fb48d9430a9 in QXcbEventReader::run (this=0x564ff18c21c0) at qxcbconnection.cpp:1370
#4  0x00007fb498e15ba0 in QThreadPrivate::start (arg=0x564ff18c21c0) at thread/qthread_unix.cpp:376
#5  0x00007fb4956e559b in start_thread () from /lib64/libpthread.so.0
#6  0x00007fb49870ea1f in clone () from /lib64/libc.so.6

Thread 1 (Thread 0x7fb49c9c8180 (LWP 16836)):
[KCrash Handler]
#6  0x00007fb49864b9eb in raise () from /lib64/libc.so.6
#7  0x00007fb49864cda1 in abort () from /lib64/libc.so.6
#8  0x00007fb47203a6e0 in Object::getDict (this=<optimized out>, this=<optimized out>) at /usr/src/debug/poppler-0.62.0-2.1.x86_64/poppler/Object.h:238
#9  FormFieldText::setContentCopy (this=0x564ff21b5460, new_content=new_content@entry=0x564ff48632d0) at /usr/src/debug/poppler-0.62.0-2.1.x86_64/poppler/Form.cc:1190
#10 0x00007fb47203a705 in FormWidgetText::setContent (this=this@entry=0x564ff21b5510, new_content=new_content@entry=0x564ff48632d0) at /usr/src/debug/poppler-0.62.0-2.1.x86_64/poppler/Form.cc:331
#11 0x00007fb47242f1c4 in Poppler::FormFieldText::setText (this=<optimized out>, text=...) at /usr/src/debug/poppler-qt5-0.62.0-2.1.x86_64/qt5/src/poppler-form.cc:316
#12 0x00007fb480133124 in Okular::EditFormTextCommand::redo (this=0x564ff25d86b0) at /usr/src/debug/okular-18.04.0-1.1.x86_64/core/documentcommands.cpp:516
#13 0x00007fb49a5cf186 in QUndoStack::push (this=0x564ff1a80330, cmd=<optimized out>, cmd@entry=0x564ff25d86b0) at util/qundostack.cpp:639
#14 0x00007fb48011fc9f in Okular::Document::editFormText (this=0x564ff196e460, pageNumber=0, form=0x564ff4915e50, newContents=..., newCursorPos=19, prevCursorPos=19, prevAnchorPos=19) at /usr/src/debug/okular-18.04.0-1.1.x86_64/core/document.cpp:3931
#15 0x00007fb48047c16d in QtPrivate::FunctorCall<QtPrivate::IndexesList<0, 1, 2, 3, 4, 5>, QtPrivate::List<int, Okular::FormFieldText*, QString const&, int, int, int>, void, void (Okular::Document::*)(int, Okular::FormFieldText*, QString const&, int, int, int)>::call (arg=<optimized out>, o=<optimized out>, f=<optimized out>) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:136
#16 QtPrivate::FunctionPointer<void (Okular::Document::*)(int, Okular::FormFieldText*, QString const&, int, int, int)>::call<QtPrivate::List<int, Okular::FormFieldText*, QString const&, int, int, int>, void> (arg=<optimized out>, o=<optimized out>, f=<optimized out>) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:169
#17 QtPrivate::QSlotObject<void (Okular::Document::*)(int, Okular::FormFieldText*, QString const&, int, int, int), QtPrivate::List<int, Okular::FormFieldText*, QString const&, int, int, int>, void>::impl (which=<optimized out>, this_=<optimized out>, r=<optimized out>, a=<optimized out>, ret=<optimized out>) at /usr/include/qt5/QtCore/qobjectdefs_impl.h:398
#18 0x00007fb49901936c in QtPrivate::QSlotObjectBase::call (a=0x7fffabe75950, r=0x564ff196e460, this=0x564ff2207180) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:378
#19 QMetaObject::activate (sender=sender@entry=0x564ff2207120, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=5, argv=argv@entry=0x7fffabe75950) at kernel/qobject.cpp:3749
#20 0x00007fb499019977 in QMetaObject::activate (sender=sender@entry=0x564ff2207120, m=m@entry=0x7fb480740940 <FormWidgetsController::staticMetaObject>, local_signal_index=local_signal_index@entry=5, argv=argv@entry=0x7fffabe75950) at kernel/qobject.cpp:3628
#21 0x00007fb480474c65 in FormWidgetsController::formTextChangedByWidget (_t6=<optimized out>, _t5=<optimized out>, _t4=<optimized out>, _t3=..., _t2=<optimized out>, _t1=<optimized out>, this=0x564ff2207120) at /usr/src/debug/okular-18.04.0-1.1.x86_64/build/okularpart_autogen/include/moc_formwidgets.cpp:392
#22 TextAreaEdit::slotChanged (this=0x564ff224c940) at /usr/src/debug/okular-18.04.0-1.1.x86_64/ui/formwidgets.cpp:676
#23 0x00007fb49901936c in QtPrivate::QSlotObjectBase::call (a=0x7fffabe75a40, r=0x564ff224c940, this=0x564ff22552d0) at ../../include/QtCore/../../src/corelib/kernel/qobjectdefs_impl.h:378
#24 QMetaObject::activate (sender=0x564ff224c940, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3749
#25 0x00007fb499019977 in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x7fb49a944020 <QTextEdit::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3628
#26 0x00007fb49a4407a0 in QTextEdit::textChanged (this=<optimized out>) at .moc/moc_qtextedit.cpp:538
#27 0x00007fb49a445b45 in QTextEdit::qt_static_metacall (_o=0x564ff224c940, _c=<optimized out>, _id=<optimized out>, _a=0x7fffabe75b90) at .moc/moc_qtextedit.cpp:324
#28 0x00007fb49901926a in QMetaObject::activate (sender=0x564ff2250c00, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3766
#29 0x00007fb499019977 in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x7fb49a9455a0 <QWidgetTextControl::staticMetaObject>, local_signal_index=local_signal_index@entry=0, argv=argv@entry=0x0) at kernel/qobject.cpp:3628
#30 0x00007fb49a4517b0 in QWidgetTextControl::textChanged (this=<optimized out>) at .moc/moc_qwidgettextcontrol_p.cpp:497
#31 0x00007fb49a45d0d5 in QWidgetTextControl::qt_static_metacall (_o=_o@entry=0x564ff2250c00, _c=_c@entry=QMetaObject::InvokeMetaMethod, _id=_id@entry=0, _a=_a@entry=0x7fffabe75d00) at .moc/moc_qwidgettextcontrol_p.cpp:256
#32 0x00007fb49a45d5c5 in QWidgetTextControl::qt_metacall (this=0x564ff2250c00, _c=QMetaObject::InvokeMetaMethod, _id=0, _a=0x7fffabe75d00) at .moc/moc_qwidgettextcontrol_p.cpp:467
#33 0x00007fb49901931e in QMetaObject::activate (sender=0x564ff2250c50, signalOffset=<optimized out>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x0) at kernel/qobject.cpp:3781
#34 0x00007fb499019977 in QMetaObject::activate (sender=<optimized out>, m=m@entry=0x7fb49a10fd00 <QTextDocument::staticMetaObject>, local_signal_index=local_signal_index@entry=1, argv=argv@entry=0x0) at kernel/qobject.cpp:3628
#35 0x00007fb499e2fc03 in QTextDocument::contentsChanged (this=<optimized out>) at .moc/moc_qtextdocument.cpp:389
#36 0x00007fb499ba054c in QTextDocumentPrivate::finishEdit (this=0x564ff2250e10) at text/qtextdocument_p.cpp:1246
#37 0x00007fb499ba08dc in QTextDocumentPrivate::endEditBlock (this=<optimized out>) at text/qtextdocument_p.cpp:1201
#38 0x00007fb499bcc874 in QTextCursor::endEditBlock (this=this@entry=0x7fffabe75df8) at text/qtextcursor.cpp:2510
#39 0x00007fb499be0921 in QSyntaxHighlighter::setDocument (this=this@entry=0x564ff2279780, doc=doc@entry=0x0) at text/qsyntaxhighlighter.cpp:343
#40 0x00007fb499be0a49 in QSyntaxHighlighter::~QSyntaxHighlighter (this=0x564ff2279780, __in_chrg=<optimized out>) at text/qsyntaxhighlighter.cpp:325
#41 0x00007fb491c9f839 in Sonnet::Highlighter::~Highlighter (this=0x564ff2279780, __in_chrg=<optimized out>) at /usr/src/debug/sonnet-5.45.0-157.1.x86_64/src/ui/highlighter.cpp:176
#42 0x00007fb49901703b in QObjectPrivate::deleteChildren (this=this@entry=0x564ff2d8bee0) at kernel/qobject.cpp:1992
#43 0x00007fb49902038b in QObject::~QObject (this=<optimized out>, __in_chrg=<optimized out>) at kernel/qobject.cpp:1022
#44 0x00007fb4968a8983 in KTextDecorator::~KTextDecorator (this=0x564ff2278e00, __in_chrg=<optimized out>) at /usr/src/debug/ktextwidgets-5.45.0-137.1.x86_64/src/widgets/ktextedit.cpp:55
#45 KTextDecorator::~KTextDecorator (this=0x564ff2278e00, __in_chrg=<optimized out>) at /usr/src/debug/ktextwidgets-5.45.0-137.1.x86_64/src/widgets/ktextedit.cpp:55
#46 0x00007fb4968a36eb in KTextEdit::Private::~Private (this=0x564ff2253730, __in_chrg=<optimized out>) at /usr/src/debug/ktextwidgets-5.45.0-137.1.x86_64/src/widgets/ktextedit.cpp:92
#47 KTextEdit::~KTextEdit (this=0x564ff224c940, __in_chrg=<optimized out>) at /usr/src/debug/ktextwidgets-5.45.0-137.1.x86_64/src/widgets/ktextedit.cpp:341
#48 0x00007fb48047bc82 in non-virtual thunk to TextAreaEdit::~TextAreaEdit() () at /usr/src/debug/okular-18.04.0-1.1.x86_64/ui/formwidgets.h:240
#49 0x00007fb4804bef7f in qDeleteAll<QSet<FormWidgetIface*>::const_iterator> (end=..., begin=...) at /usr/include/qt5/QtCore/qalgorithms.h:320
#50 qDeleteAll<QSet<FormWidgetIface*> > (c=...) at /usr/include/qt5/QtCore/qalgorithms.h:328
#51 PageViewItem::~PageViewItem (this=0x564ff21ea6f0, __in_chrg=<optimized out>) at /usr/src/debug/okular-18.04.0-1.1.x86_64/ui/pageviewutils.cpp:57
#52 0x00007fb4804ac9ee in PageView::notifySetup (this=0x564ff1d3c8a0, pageSet=..., setupFlags=<optimized out>) at /usr/src/debug/okular-18.04.0-1.1.x86_64/ui/pageview.cpp:1078
#53 0x00007fb48012377a in Okular::Document::closeDocument (this=0x564ff196e460) at /usr/src/debug/okular-18.04.0-1.1.x86_64/core/document.cpp:2682
#54 0x00007fb48043e375 in Okular::Part::closeUrl (this=0x564ff1a3e510, promptToSave=<optimized out>) at /usr/src/debug/okular-18.04.0-1.1.x86_64/part.cpp:1826
#55 0x0000564ff07b1126 in Shell::~Shell (this=this@entry=0x564ff19d0de0, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /usr/src/debug/okular-18.04.0-1.1.x86_64/shell/shell.cpp:194
#56 0x0000564ff07b1229 in Shell::~Shell (this=0x564ff19d0de0, __in_chrg=<optimized out>, __vtt_parm=<optimized out>) at /usr/src/debug/okular-18.04.0-1.1.x86_64/shell/shell.cpp:202
#57 0x00007fb499019c78 in QObject::event (this=this@entry=0x564ff19d0de0, e=e@entry=0x564ff21d0000) at kernel/qobject.cpp:1237
#58 0x00007fb49a2cbac3 in QWidget::event (this=this@entry=0x564ff19d0de0, event=event@entry=0x564ff21d0000) at kernel/qwidget.cpp:9263
#59 0x00007fb49a3d5b4c in QMainWindow::event (this=this@entry=0x564ff19d0de0, event=event@entry=0x564ff21d0000) at widgets/qmainwindow.cpp:1342
#60 0x00007fb49bb559f7 in KMainWindow::event (this=this@entry=0x564ff19d0de0, ev=ev@entry=0x564ff21d0000) at /usr/src/debug/kxmlgui-5.45.0-164.1.x86_64/src/kmainwindow.cpp:865
#61 0x00007fb49bb9a715 in KXmlGuiWindow::event (this=0x564ff19d0de0, ev=0x564ff21d0000) at /usr/src/debug/kxmlgui-5.45.0-164.1.x86_64/src/kxmlguiwindow.cpp:119
#62 0x00007fb49a28f01c in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x564ff19d0de0, e=0x564ff21d0000) at kernel/qapplication.cpp:3733
#63 0x00007fb49a296314 in QApplication::notify (this=0x7fffabe76940, receiver=0x564ff19d0de0, e=0x564ff21d0000) at kernel/qapplication.cpp:3492
#64 0x00007fb498feb148 in QCoreApplication::notifyInternal2 (receiver=0x564ff19d0de0, event=event@entry=0x564ff21d0000) at kernel/qcoreapplication.cpp:1044
#65 0x00007fb498fedb25 in QCoreApplication::sendEvent (event=0x564ff21d0000, receiver=<optimized out>) at kernel/qcoreapplication.h:234
#66 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x564ff18c7f20) at kernel/qcoreapplication.cpp:1719
#67 0x00007fb498fee0a8 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1573
#68 0x00007fb499043393 in postEventSourceDispatch (s=0x564ff19b9b00) at kernel/qeventdispatcher_glib.cpp:276
#69 0x00007fb4930e3277 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#70 0x00007fb4930e34b0 in ?? () from /usr/lib64/libglib-2.0.so.0
#71 0x00007fb4930e353c in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#72 0x00007fb499042a0f in QEventDispatcherGlib::processEvents (this=0x564ff195a650, flags=...) at kernel/qeventdispatcher_glib.cpp:423
#73 0x00007fb48d9c4781 in QPAEventDispatcherGlib::processEvents (this=0x564ff195a650, flags=...) at qeventdispatcher_glib.cpp:69
#74 0x00007fb498fe995a in QEventLoop::exec (this=this@entry=0x7fffabe76870, flags=..., flags@entry=...) at kernel/qeventloop.cpp:212
#75 0x00007fb498ff2494 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1332
#76 0x0000564ff07a7317 in main (argc=<optimized out>, argv=<optimized out>) at /usr/src/debug/okular-18.04.0-1.1.x86_64/shell/main.cpp:87

The reporter indicates this bug may be a duplicate of or related to bug 361792.

Possible duplicates by query: bug 361792.

Reported using DrKonqi
Comment 1 Albert Astals Cid 2018-04-22 17:46:33 UTC
Git commit 3cea7c9927f0d7ff32bcfc1fbacde229d98e24c7 by Albert Astals Cid.
Committed on 22/04/2018 at 17:46.
Pushed by aacid into branch 'Applications/18.04'.

Fix crash on exit when having edited a text area

For some reason Q/KTextEdit is sending textChanged inside the
destructor, so protect us from that.

M  +15   -0    autotests/parttest.cpp
M  +5    -0    ui/formwidgets.cpp

https://commits.kde.org/okular/3cea7c9927f0d7ff32bcfc1fbacde229d98e24c7
Comment 2 Albert Astals Cid 2018-06-04 23:10:28 UTC
*** Bug 379749 has been marked as a duplicate of this bug. ***