Fix crash on exit when having edited a text area

For some reason Q/KTextEdit is sending textChanged inside the
destructor, so protect us from that.

BUG: 393334